fix: socialmedia icon not showing

--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,8 @@
+/*
+  About Section
+  - Style for the about section
+*/
+
 .about-container {
     padding: 2rem;
     margin-top: 2rem;
