--- a/css/education.css
+++ b/css/education.css
@@ -1,3 +1,8 @@
+/*
+  Education Page
+  - Style for the education page
+*/
+
 .education-container {
     padding: 2rem;
     margin-top: 2rem;
