--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,8 @@
+/*
+  Projects Page
+  - Style for the projects page
+*/
+
 .projects-container {
     padding: 2rem;
     margin-top: 2rem;
